<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D9D9D9"
        android:padding="14dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            android:contentDescription="Kembali" />

        <TextView
            android:id="@+id/tvSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:padding="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

        <!-- Versi -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="1.1"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"/>

        <View style="@style/DividerLine" />

        <!-- Pengaturan Notifikasi -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/pengaturan_notifikasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"/>

                <TextView
                    android:text="@string/deskripsi_pengaturan_notifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textSize="12sp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="2dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginBottom="16dp"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbEnableNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_gravity="center_vertical"
                android:buttonTint="#FFD600" />

        </LinearLayout>

        <View style="@style/DividerLine" />

        <!-- Bahasa -->
        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/language"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCurrentLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/isi_bahasa"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp" />

        <View style="@style/DividerLine" />

        <!-- Tema -->
        <LinearLayout
        android:id="@+id/layoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="22dp"
                android:text="@string/theme"
                android:textColor="?android:textColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
            android:id="@+id/tvCurrentTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/auto"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="22dp"
            android:textColor="?android:textColor"
            android:textSize="14sp" />
        </LinearLayout>
        <View style="@style/DividerLine" />

        <!-- Privacy Policy -->
        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Privacy_Policy"
            android:textColor="?android:textColor"
            android:textSize="14sp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textStyle="bold" />

        <View style="@style/DividerLine" />

        <!-- Pengaturan Privasi -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pengaturan_Privasi"
                    android:textColor="?android:textColor"
                    android:textSize="14sp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/isi_pengaturan_privasi"
                    android:textColor="?android:textColor"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:justificationMode="inter_word"
                    android:textSize="12sp" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/cbPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_gravity="center_vertical"
                android:buttonTint="#FFD600" />
        </LinearLayout>

</LinearLayout>
